Refactor JavaBreakingTest for multi-version compatibility
Updated class to demonstrate breaking changes across Java versions and renamed methods for clarity.